# Tart

./: .gitignore  README.md  app.py  app_web.py  card_log.json  current_hand.json  equitypredict.py  main.py  package-lock.json  package.json  pyproject.toml
backend/: TESTING_VOICE_BETTING.md  app.py  app_web.py  bot_game.py  bot_players.py  card_logger.py  dedalus_client.py  equitypredict.py  package-lock.json  pot_calc.py  probabilities.py  requirements-dedalus.txt  requirements-voice.txt  requirements.txt  table_server.py  table_simulator.py  voice_betting_tracker.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  theme.js
frontend/src/api/: backend.js
frontend/src/components/: BetRecommendationPanel.jsx  BettingModal.jsx  BoardDisplay.css  BoardDisplay.jsx  BotGameView.jsx  BotMatchView.css  BotMatchView.jsx  CameraPermission.jsx  CameraSelector.jsx  CardsPanel.jsx  CoachChat.jsx  EquityPanel.jsx  HandProbabilitiesPanel.jsx  HoleDisplay.css  HoleDisplay.jsx  LandingPage.css  LandingPage.jsx  MoveLog.css  MoveLog.jsx  OpponentProfiles.jsx  PotOddsPanel.jsx  TableSimulator.css  TableSimulatorView.jsx  VideoFeed.jsx  VoiceBettingPanel.jsx
frontend/src/hooks/: useVoiceInput.js
frontend/src/utils/: cardImages.js  moveLogStats.js  voiceParser.js
insights/: README.md
insights/decision_transfer/: README.md  __init__.py  habits.py  report_schema.py  trait_mappings.py  transfer_engine.py
templates/: index.html
