[project]
name = "tart-mcp"
version = "1.0.0"
description = "Tart MCP server for Dedalus deploy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dedalus-mcp",
    "dedalus-labs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
