[project]
name = "tart-mcp"
version = "1.0.0"
description = "Tart MCP server for Dedalus deploy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dedalus-mcp",
    "dedalus-labs",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

# Install main.py as top-level module so "python3 -m main" works in deploy
[tool.setuptools]
py-modules = ["main"]
